IVMDescriptor interface introduced. VMDescriptorBase replaced with IVMDescriptor.

--- a/Main-binder/Source/Mvvm/Mvvm.csproj
+++ b/Main-binder/Source/Mvvm/Mvvm.csproj
@@ -184,6 +184,7 @@
     <Compile Include="ViewModels\Core\Validation\CollectionValidator.cs" />
     <Compile Include="ViewModels\Core\Validation\CollectionValidatorState.cs" />
     <Compile Include="ViewModels\Core\VMDescriptorBuilder\VMDescriptorConfiguration.cs" />
+    <Compile Include="ViewModels\Core\VMDescriptor\IVMDescriptor.cs" />
     <Compile Include="ViewModels\Core\VMDescriptor\IVMDescriptorBuilder.cs" />
     <Compile Include="ViewModels\Core\GeneralBehaviors\CacheBehavior.cs" />
     <Compile Include="ViewModels\Core\GeneralBehaviors\CollectionBehaviors\DelegatePopulatorCollectionBehavior.cs" />
