--- a/Dev/Source/Mvvm/Mvvm.csproj
+++ b/Dev/Source/Mvvm/Mvvm.csproj
@@ -261,12 +261,12 @@
     <Compile Include="ViewModels\Core\Validation\ViewModelBehaviors\ValidationResultAggregatorCacheBehavior.cs" />
     <Compile Include="ViewModels\Core\Validation\ViewModelBehaviors\ValidatorExecutorBehavior.cs" />
     <Compile Include="ViewModels\Core\Validation\ViewModelBehaviors\ViewModelValidationSourceBehavior.cs" />
-    <Compile Include="ViewModels\Core\VMDescriptorBuilder\ValidatorsNew\IValidatorBuilderOperationProvider.cs" />
-    <Compile Include="ViewModels\Core\VMDescriptorBuilder\ValidatorsNew\ValidatorBuilderOperation.cs" />
-    <Compile Include="ViewModels\Core\VMDescriptorBuilder\ValidatorsNew\CollectionValidationBuilder.cs" />
-    <Compile Include="ViewModels\Core\VMDescriptorBuilder\ValidatorsNew\PropertyValidationBuilder.cs" />
-    <Compile Include="ViewModels\Core\VMDescriptorBuilder\ValidatorsNew\RootValidatorBuilder.cs" />
-    <Compile Include="ViewModels\Core\VMDescriptorBuilder\ValidatorsNew\ValidatorBuilder.cs" />
+    <Compile Include="ViewModels\Core\VMDescriptorBuilder\Validators\IValidatorBuilderOperationProvider.cs" />
+    <Compile Include="ViewModels\Core\VMDescriptorBuilder\Validators\ValidatorBuilderOperation.cs" />
+    <Compile Include="ViewModels\Core\VMDescriptorBuilder\Validators\CollectionValidationBuilder.cs" />
+    <Compile Include="ViewModels\Core\VMDescriptorBuilder\Validators\PropertyValidationBuilder.cs" />
+    <Compile Include="ViewModels\Core\VMDescriptorBuilder\Validators\RootValidatorBuilder.cs" />
+    <Compile Include="ViewModels\Core\VMDescriptorBuilder\Validators\ValidatorBuilder.cs" />
     <Compile Include="ViewModels\Core\VMDescriptorBuilder\VMDescriptorConfiguration.cs" />
     <Compile Include="ViewModels\Core\VMDescriptor\IVMDescriptorBuilder.cs" />
     <Compile Include="ViewModels\Core\GeneralBehaviors\CacheBehavior.cs" />
